fix style overflow error when icon load failed

--- a/src/styles/_icon.scss
+++ b/src/styles/_icon.scss
@@ -3,6 +3,7 @@
   max-height: 1em;
   width: auto;
   padding: 0 5px;
+  overflow: hidden;
   transform: translate(0px, 12.5%);
 }
 
